#28 inflector module
