# agent/swagger/src/main/resources/swagger.yaml
@@ -5,6 +5,8 @@
   paths:
     /task:
       get:
+        tags:
+        - tasks
         summary: Get list of tasks
         description: List of tasks on tasks
         operationId: getTasks
@@ -18,6 +20,8 @@
               $ref: '#/definitions/Tasks'
     /task/{taskId}:
       get:
+        tags:
+        - tasks
         summary: Get task information
         operationId: getTask
         produces:
@@ -38,7 +42,11 @@
             description: Invalid ID
           404:
             description: Task not found
+        security:
+        - api_key: []
       delete:
+        tags:
+        - tasks
         summary: Delete task
         operationId: deleteTask
         produces:
@@ -61,6 +69,8 @@
             description: Task not found
     /task/{taskId}/log:
       get:
+        tags:
+        - tasks
         summary: Get task's log
         operationId: getLog
         produces:
@@ -94,6 +104,8 @@
 
     /vm:
       post:
+        tags:
+        - vm
         summary: "Create new VM"
         description: "Submit task to create new VM"
         operationId: createVM
@@ -119,6 +131,8 @@
             description: Invalid input
     /vm/{vmId}:
       get:
+        tags:
+        - vm
         summary: Get VM information
         operationId: getVM
         produces:
@@ -140,6 +154,8 @@
           404:
             description: VM not found
       put:
+        tags:
+        - vm
         summary: Update VM
         operationId: updateVM
         produces:
@@ -166,6 +182,8 @@
           404:
             description: VM not found
       delete:
+        tags:
+        - vm
         summary: Delete VM
         operationId: deleteVM
         produces:
@@ -188,6 +206,8 @@
             description: VM not found
     /vm/{vmId}/firewall:
       get:
+        tags:
+        - vm
         summary: Get VM firewall rules information
         operationId: getVMFirewallRules
         produces:
@@ -209,6 +229,8 @@
           404:
             description: VM not found
       put:
+        tags:
+        - vm
         summary: Update VM firewall rules
         operationId: updateVMFirewallRules
         produces:
@@ -237,7 +259,10 @@
 
     /vm/{vmId}/upload:
       put:
+        tags:
+        - vm
         summary: Upload file to VM
+        operationId: uploadFile
         consumes:
         - multipart/form-data
         produces:
@@ -257,7 +282,10 @@
             description: Successful
     /vm/{vmId}/execute:
       put:
+        tags:
+        - vm
         summary: Execute command on VM
+        operationId: executeScript
         consumes:
         - application/xml
         - application/json
@@ -282,7 +310,11 @@
               type: string
           405:
             description: Invalid input
-
+  securityDefinitions:
+    api_key:
+      type: apiKey
+      name: api_key
+      in: header
   definitions:
     VM:
       properties:
